hw4/webook/webook-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql-jasonzhao47
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql-jasonzhao47
  template:
    metadata:
      labels:
        app: webook-mysql-jasonzhao47
    spec:
      containers:
        - name: webook-mysql-jasonzhao47
          ports:
            - containerPort: 3306
          image: mysql:8.0.29
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-pvc
