hw4/webook/webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-jasonzhao47
# 规则说明，用来说明这个实体service或者deployment是用来做啥的
spec:
  selector:
    app: webook-jasonzhao47
  ports:
    - name: http
      protocol: TCP
      port: 87
      targetPort: 8081
  type: ClusterIP
